--- a/vignettes/Case studies/x2CaseStudyChitosan.Rmd
+++ b/vignettes/Case studies/x2CaseStudyChitosan.Rmd
@@ -7,6 +7,7 @@ editor_options:
   chunk_output_type: console
 ---
 
+
 ```{r setup, include=FALSE}
 knitr::knit_meta()
 knitr::opts_chunk$set(echo = TRUE)
@@ -20,10 +21,10 @@ knitr::opts_knit$set(root.dir = projectRoot)
 We assume you have the input data for a substance or material of interest and all the data describing the SimpleBox world to be created ready and thus can run the initWorld script.
 
 ```{r message=FALSE, warning=FALSE, paged.print=TRUE}
-library(dplyr)
+#library(dplyr)
 substance <-  "GO-Chitosan"
 source("baseScripts/initWorld_onlyParticulate.R")
-
+World$substance <- substance
 ```
 
 ## Computing Spherical equivalent diameter
