--- a/vignettes/Case studies/DPMFA_LEON-T.Rmd
+++ b/vignettes/Case studies/DPMFA_LEON-T.Rmd
@@ -25,6 +25,8 @@ Plastics. Here, we initialize the world for plastics.
 
 ```{r Initialize World}
 library(lhs)
+library(readxl)
+library(viridis)
 
 source("baseScripts/initWorld_onlyPlastics.R")
 
@@ -33,7 +35,6 @@ World$substance <- "microplastic"
 
 # Load the DPMFA data and make a nested emission dataframe
 
-*To do: don't sum over all polymers but do this per polymer* 
 
 ```{r Load DPMFA data}
 abspath <- "R:/Projecten/E121554 LEON-T/03 - uitvoering WP3/DPMFA_output/Baseline_PMFA_EU.RData"
@@ -57,6 +58,9 @@ data_long <-
 # Choose a source of interest if you want, else write NA
 source_of_interest <- "Tyre wear"
 
+# Choose material of interest 
+mat <- "RUBBER"
+
 if(!is.na(source_of_interest)){
   if(!source_of_interest %in% unique(data_long$Source)){
     print("Selected source not in dataframe")
@@ -70,7 +74,7 @@ if(!is.na(source_of_interest)){
 # Calculate kg/s from kt/y 
 data_summed <- data_long |>
   filter(Source %in% filtersource) |>
-  filter(between(RUN, 1, 100)) |>
+  #filter(between(RUN, 1, 100)) |>
   mutate(Mass_Polymer_kg_s = Mass_Polymer_kt*1000000/(365.25*24*3600)) |>
   filter(Material_Type == "micro") 
 
@@ -112,118 +116,139 @@ data_filtered <- data_summed |>
 ```{r Make a separate emission df for every polymer}
 polymers <- unique(data_filtered$Polymer)
 
-for(i in polymers){
- filtered <- data_filtered |>
-   filter(Polymer == i)
- 
- df_names <- c()
- 
- if(type == "DPMFA"){
-   # Make an emission dataframe for the dynamic uncertain solver
-   emis_df_dyn <- filtered |>
-     group_by(Abbr, Year) |>
-     rename(Timed = Year) |>
-     mutate(Timed = as.double(Timed)*(365.25*24*3600)) |>
-     nest(Emis = c(RUN, value)) 
-   
-   df_name <- paste0("emis_dyn_", i)
-   
-   assign(df_name, emis_df_dyn)
 
-   df_names <- c(df_names, df_name)
+filtered <- data_filtered |>
+ filter(Polymer == mat)
+ 
+df_names <- c()
+ 
+if(type == "DPMFA"){
+ # Make an emission dataframe for the dynamic uncertain solver
+ emis_df_dyn <- filtered |>
+   group_by(Abbr, Year) |>
+   rename(Timed = Year) |>
+   mutate(Timed = as.double(Timed)*(365.25*24*3600)) |>
+   nest(Emis = c(RUN, value)) 
+ 
+ df_name <- paste0("emis_dyn_", i)
+
+ assign(df_name, emis_df_dyn)
+
+ df_names <- c(df_names, df_name)
    
- } else if(type == "PMFA"){
+ ymin <- min(emis_df_dyn$Year)
+ ymax <- max(emis_df_dyn$Year)
+   
+} else if(type == "PMFA"){
   
-   # Select data for 2019
-   y <- 2019
+ # Select data for 2019
+ y <- 2019
   
-   # Make an emission dataframe for the steady uncertain solver
-   emis_df_ss <- filtered |>
-     filter(Year == y) |>
-     nest(Emis = c(RUN, value)) 
+ # Make an emission dataframe for the steady uncertain solver
+ emis_df_ss <- filtered |>
+   filter(Year == y) |>
+   nest(Emis = c(RUN, value)) 
+ 
+ df_name <- paste0("emis_ss_", i)
    
-   df_name <- paste0("emis_ss_", i)
+ assign(df_name, emis_df_ss)
    
-   assign(df_name, emis_df_ss)
-   
-   df_names <- c(df_names, df_name)
- }
+ df_names <- c(df_names, df_name)
 }
+
+```
+
+```{r Functions for distributions}
+# Define triangular distribution function
+Triangular <- function(u, a, b, c) {               # u = samples, a = , b = , c = 
+  ifelse(u < (c-a)/(b-a),
+         a + sqrt(u * (b-a) * (c-a)),
+         b - sqrt((1-u) * (b-a) * (b-c)))
+}
+
+# Define uniform distribution function
+Uniform <- function(u, a, b) {                     # u = samples, a = min, b = max
+  transformed_samples <- a + (b - a) * lhs_samples
+  return(transformed_samples)
+}
+
+# Define power law distribution function
+
+
 
 ```
 
 # Create dummy dataset with uncertain variables
 
 ```{r}
-n_samples <- nrow(emis_df_ss$Emis[[1]])
-n_vars <- 2
+# Path to excel file with distribution values
+path_dist <- "N:/Documents/Simplebox/Microplastic_variables.xlsx"
 
+# Generate the correct number of samples
+n_samples <- nrow(emis_df_ss$Emis[[1]]) # Number of emission runs 
+sample_df_names <- c()
+
+input_vars <- read_excel(path_dist, sheet = mat) |>
+  filter(!is.na(Distribution)) |>
+  select(-c(Source, Comments))
+  
+varnames <- unique(input_vars$VarName)
+  
+n_vars <- nrow(input_vars)
 # Generate LHS
 lhs_samples <- randomLHS(n_samples, n_vars)
+var_df_names <- c()
+  
+for(j in 1:nrow(input_vars)){
+  df <- input_vars[j, ]
 
-# Define triangular distribution function
-triangular_cdf_inv <- function(u, a, b, c) {
-  ifelse(u < (c-a)/(b-a),
-         a + sqrt(u * (b-a) * (c-a)),
-         b - sqrt((1-u) * (b-a) * (b-c)))
+  if(is.na(df$Scale) && is.na(df$SubCompart) && is.na(df$Species)){
+    varname <- df$VarName
+      
+    var <- World$fetchData(varname)
+    var <- data.frame(setNames(var, varname))
+    
+    name <- paste0("var", j)
+    var_df_names <- c(var_df_names, name)
+      
+    var_df <- var |>
+      mutate(Scale = df$Scale) |>
+      mutate(SubCompart = df$SubCompart)
+
+    var_df$a <- df$Min
+    var_df$b <- df$Max
+    var_df$c <- df$Peak
+      
+    assign(name, var_df)
+  } 
 }
-
-# Define the names of the uncertain variables
-var1Name <- "RhoS"
-
-var <- World$fetchData(var1Name)
-var <- data.frame("RhoS" = var)
-
-var1 <- var |>
-  mutate(Scale = NA) |>
-  mutate(SubCompart = NA)
-
-# Set the parameters for the triangular distribution
-var1$a <- 1500    # Minimum value
-var1$b <- 2200    # Maximum value
-var1$c <- 1850         # Mode (peak)
-
-# Define the names of the uncertain variables
-var2Name <- "RadS"
-
-var <- World$fetchData(var1Name)
-var <- data.frame("RadS" = var)
-
-var2 <- var |>
-  mutate(Scale = NA) |>
-  mutate(SubCompart = NA)
-
-# Set the parameters for the triangular distribution
-var2$a <- 0.5        # Minimum value
-var2$b <- 2500000    # Maximum value
-var2$c <- 1250000    # Mode (peak)
-
+  
 params <- tibble(
-  varName = c(var1Name, var2Name),
-  Scale = c(var1$Scale, var2$Scale),
-  SubCompart = c(var1$SubCompart, var2$SubCompart),
-  data = list(
-    tibble(id = c("a", "b", "c"), value = c(var1$a, var1$b, var1$c)),
-    tibble(id = c("a", "b", "c"), value = c(var2$a, var2$b, var2$c))
-  )
-)
+  varName = varnames,
+  Scale = sapply(var_df_names, function(v) get(v)$Scale),
+  SubCompart = sapply(var_df_names, function(v) get(v)$SubCompart),
+  data = lapply(var_df_names, function(v) {
+    df <- get(v)
+    tibble(id = c("a", "b", "c"), value = c(df$a, df$b, df$c))
+  }))
 
 sample_df <- params
+  # Transform each LHS sample column to the corresponding triangular distribution
 
-# Transform each LHS sample column to the corresponding triangular distribution
-for (i in 1:n_vars) {
-  a <- filter(params$data[[i]], id == "a") %>% pull(value)
-  b <- filter(params$data[[i]], id == "b") %>% pull(value)
-  c <- filter(params$data[[i]], id == "c") %>% pull(value)
-  
-  samples <- triangular_cdf_inv(lhs_samples[, i], a, b, c)
-  
-  # Create a new tibble for 'data' with samples replacing original values
+for (k in 1:n_vars) {
+  a <- filter(params$data[[k]], id == "a") %>% pull(value)
+  b <- filter(params$data[[k]], id == "b") %>% pull(value)
+  c <- filter(params$data[[k]], id == "c") %>% pull(value)
+    samples <- Triangular(lhs_samples[, k], a, b, c)
+    # Create a new tibble for 'data' with samples replacing original values
   new_data <- tibble(value = samples)
-  
-  # Update the data column in the sample_df
-  sample_df$data[[i]] <- new_data
+    # Update the data column in the sample_df
+  sample_df$data[[k]] <- new_data
 }
+  
+sample_df_name <- paste0("sample_df_",i)
+sample_df_names <- paste0(sample_df_names, sample_df_name)
+assign(sample_df_name, sample_df)
 
 ```
 
@@ -236,265 +261,334 @@ Solve the matrix depending on the type of input emissions given (PMFA = Steady s
 if(type == "PMFA"){
   World$NewSolver("UncertainSolver")
   
-  for(i in df_names){
-    solved <- World$Solve(get(i), needdebug = FALSE, sample_df)
-    assign(paste0("solved_", i), solved)
+  for(i in polymers){
+    emis_df_name <- paste0("emis_ss_", i)
+    sample_df_name <- paste0("sample_df_", i)
+    
+    solved <- World$Solve(get(emis_df_name), needdebug = FALSE, get(sample_df_name))
+    assign(paste0("solved_ss_", i), solved)
   }
   
 } else if(type == "DPMFA"){
   World$NewSolver("UncertainDynamicSolver")
   
-  for(i in df_names){
+  for(i in polymers){
+    emis_df_name <- paste0("emis_dyn_", i)
+    sample_df_name <- pasteo("sample_df_", i)
+    
     solved <- World$Solve(World$Solve(get(i)), sample_df, tmax = tmax, needdebug = F)
-    assign(paste0("solved_", i), solved)
+    assign(paste0("solved_dyn_", i), solved)
   }
 }
 
 ```
 
-# Prep data and make plots
+# Calculate concentrations
+```{r Calculate concentrations}
 
+dfname <- paste0("solved_ss_", mat)
+  
+sol <- get(dfname)
+  
+Solution <- sol$SteadyStateMass |>
+  mutate(SubCompart = ifelse(SubCompart == "cloudwater", "air", SubCompart)) |>
+  mutate(Abbr = str_replace_all(Abbr, "cw", "a")) |>
+  group_by(RUN, Scale, SubCompart, Species, Unit, Abbr) |>
+  summarise(EqMass = sum(EqMass)) |>
+  ungroup() 
+  
+# Fetch necessary data
+  
+# Sum cloudwater and air under air
+Volume <- World$fetchData("Volume") |>
+  mutate(SubCompart = ifelse(SubCompart == "cloudwater", "air", SubCompart)) |>
+  group_by(Scale, SubCompart) |>
+  summarise(Volume = sum(Volume)) |>
+  ungroup()
+  
+Area <- World$fetchData("Area")
+FRACw <- World$fetchData("FRACw")
+FRACa <- World$fetchData("FRACa")
+Fractrial <- FRACa$FRACa[FRACa$SubCompart =="air" & FRACa$Scale =="Arctic" ]
+Rho <- World$fetchData("rhoMatrix")
+Concentration_eq <- merge(Solution, Volume, by = c("SubCompart", "Scale"))
+Concentration_eq$Concentration <- Concentration_eq$EqMass / Concentration_eq$Volume
+RhoWater_value <- Rho$rhoMatrix[Rho$SubCompart == "river"]
+
+f_adjust_concentration <- function(Concentration, FRACw, FRACa, SubCompart, Scale, Rho, RhoWater_value) {
+  # Fetch Fracw based on SubCompart and Scale
+  Fracw <- FRACw$FRACw[FRACw$SubCompart == SubCompart & FRACw$Scale == Scale]
+  
+  # Fetch Fraca based on SubCompart and Scale
+  Fraca <- FRACa$FRACa[FRACa$SubCompart == SubCompart & FRACa$Scale == Scale]
+  
+  # Fetch RHOsolid based on SubCompart
+  RHOsolid <- Rho$rhoMatrix[Rho$SubCompart == SubCompart]
+    
+  # Check if any of Fracw, Fraca, or RHOsolid are N
+    
+  Concentration * 1000 / (Fracw * RhoWater_value + (1 - Fracw - Fraca) * RHOsolid)
+}
+  
+subcomparts <- c("agriculturalsoil", "naturalsoil", "othersoil", "freshwatersediment", "marinesediment")
+  
+filtered_data <- Concentration_eq[Concentration_eq$SubCompart %in% subcomparts, ]
+  
+# Apply the adjustment function to the filtered data
+adjusted_concentrations <- apply(filtered_data, 1, function(row) {
+  f_adjust_concentration(
+    Concentration = as.numeric(row["Concentration"]),
+    FRACw = subset(FRACw, SubCompart == row["SubCompart"] & Scale == row["Scale"]),
+    FRACa = subset(FRACa, SubCompart == row["SubCompart"] & Scale == row["Scale"]),
+    Rho = subset(Rho, SubCompart == row["SubCompart"]),
+    RhoWater_value = 998,  # Replace with your actual RhoWater_value
+    SubCompart = row["SubCompart"],
+    Scale = row["Scale"]
+  )
+})
+# Update Concentration_eq with adjusted concentrations
+Concentration_eq[Concentration_eq$SubCompart %in% subcomparts, "Concentration"] <- adjusted_concentrations
+
+#Define the units
+subcompart <- c("agriculturalsoil", "naturalsoil", "othersoil", "freshwatersediment", "marinesediment",  "lakesediment", "air", "deepocean", "lake" , "river", "sea")
+units <- c("g/kg dw", "g/kg dw", "g/kg dw", "g/kg dw", "g/kg dw", "g/kg dw",
+           "kg/m^3", "kg/L", "kg/L", "kg/L", "kg/L", "kg/L")
+  
+# Combine into a named list
+subcompart_units <- setNames(units, subcompart)
+Concentration_eq <- Concentration_eq |>
+  mutate(Units_per_SubCompart = subcompart_units[SubCompart])
+  
+convert_units <- function(concentration, unit) {
+  if (unit == "g/kg dw") {
+    return(concentration * 1e9)
+  } else if (unit == "kg/m^3") {
+    return(concentration * 1e12)
+  } else if (unit == "kg/L") {
+    return(concentration * 1e12)
+  } else {
+    return(concentration)
+  }
+}
+
+# Convert concentrations to ng/kg or ng/L and update units
+Concentration_eq <- Concentration_eq |>
+  mutate(
+         Concentration = mapply(convert_units, Concentration, Units_per_SubCompart),
+         Units_per_SubCompart = ifelse(Units_per_SubCompart == "g/kg dw", "ng/kg dw", 
+                                       ifelse(Units_per_SubCompart == "kg/m^3", "ng/m^3", "ng/L")))
+Concentration_eq <- Concentration_eq |>
+  mutate(across(where(is.numeric), ~ format(., scientific = TRUE)))
+
+solname <- paste0("Solution_", mat)
+assign(solname, Concentration_eq)
+  
+```
+
+# Prep data and make plots
 ```{r Solve steady state}
 
-if(type == "PMFA"){
-  for(i in df_names){
-    solved <- paste0("solved_",i)
-    
-    # Prepare data for plots
-    Input_Variables <- 
-      solved$Input_Variables |> unnest(data) 
-    Input_Emission <- 
-      solved$Input_Emission |> unnest(Emis) 
-    
-    Plot_data <- 
-      Input_Variables |> 
-    # some units missing resulting in NA
-      pivot_wider(names_from = c(varName,Scale,SubCompart,Unit), values_from = value) |> 
-      full_join(solved$SteadyStateMass) |>
-      full_join(Input_Emission, by = c("Abbr", "RUN"))
-    
-    varnames <- colnames(Plot_data)[2:(1+n_vars)]
-    
-    plot_theme <-  theme(
-        axis.title.x = element_text(size = 14),    
-        axis.title.y = element_text(size = 14),    
-        axis.text.x = element_text(size = 12, angle = 45, hjust = 1),     
-        axis.text.y = element_text(size = 12),
-        title = element_text(size=20)
-      )
+# Create a plot theme
+plot_theme <-  theme(
+  axis.title.x = element_text(size = 14),    
+  axis.title.y = element_text(size = 14),    
+  axis.text.x = element_text(size = 12, angle = 45, hjust = 1),     
+  axis.text.y = element_text(size = 12),
+  title = element_text(size=20),
+  panel.background = element_rect(fill = "white"),  # White background
+  panel.grid.major = element_line(color = "lightgrey", size = 0.5),  # Major grid lines in light grey
+  panel.grid.minor = element_line(color = "lightgrey", size = 0.25)
+)
 
-    emiscomps <- unique(solved$Input_Emission$Abbr)
+# Plot the data for each polymer separately, for all selected compartments (different plots depending on PMFA or DPMFA)
+if(type == "PMFA"){
+  solution_name <- paste0("Solution_", mat)
+  df_name <- paste0("solved_ss_", mat)
+  
+  Solution <- get(solution_name) |>
+    mutate(RUN = as.integer(RUN)) |>
+    mutate(EqMass = as.double(EqMass)) |>
+    mutate(Concentration = as.double(Concentration)) 
+  
+  solved <- get(df_name)
+  
+  # Prepare data for plots
+  Input_Variables <- 
+    solved$Input_Variables |> unnest(data) 
+  Input_Emission <- 
+    solved$Input_Emission |> unnest(Emis) 
+  
+  Plot_data <- 
+    Input_Variables |> 
+    pivot_wider(names_from = c(varName,Scale,SubCompart,Unit), values_from = value) |> 
+    full_join(Solution) |>
+    full_join(Input_Emission, by = c("Abbr", "RUN"))
+  
+  # Aggregate plot data for all species
+  Plot_data_agg <- Plot_data |>
+    group_by(Scale, SubCompart, RUN, Unit.x, Units_per_SubCompart) |>
+    summarise(EqMass = sum(EqMass), Concentration = sum(Concentration))
+  
+  scales <- unique(Plot_data_agg$Scale)
+  
+  # Make plots for each scale, one with mass and one with concentrations
+  for (scale in scales) {
+    df <- Plot_data_agg |>
+      filter(Scale == scale) |>
+      mutate(concname = paste0(SubCompart, " (", Units_per_SubCompart, ")"))
     
-    # Plot the data
-    p1 <- ggplot(Plot_data, mapping = aes(x=varnames[1], y = EqMass)) +
-      geom_point() + facet_wrap(vars(Abbr)) +
-      scale_y_continuous(trans = 'log10')
-    p1
+    # Filter out the compartments without mass
+    masscomps <- df |>
+      filter(RUN == 1) |>
+      filter(EqMass != 0)
     
-    plots_data <- Plot_data |>
-      filter(Abbr %in% emiscomps)
+    masscomps <- masscomps$SubCompart
     
-    subt <- paste0("Uncertain emissions, ", as.character(y), ", ", filtersource , " , ", unique())
+    df <- df |>
+      filter(SubCompart %in% masscomps)
     
-    for(i in varnames) {
-      p2 <- ggplot(plots_data, mapping = aes(x = .data[[i]], y = EqMass)) +
+    # Mass plot
+    mass_p <- ggplot(df, mapping = aes(x = SubCompart, y = EqMass, fill = SubCompart)) +  
+      geom_violin() + 
+      labs(title = paste0("Masses at ", scale, " scale"),
+           subtitle = subt,
+           x = "Compartment",
+           y = "Mass (kg)") +
+      plot_theme +
+      scale_y_continuous(trans = 'log10') +
+      scale_fill_viridis_d() + 
+      # Customize the legend for this plot as well
+      theme(axis.text.x = element_blank(),  # Remove x-axis labels
+            legend.position = "bottom") +   # Move legend to the bottom
+      guides(fill = guide_legend(title = NULL))  # Remove legend title
+    
+    print(mass_p)
+    
+    ggsave(paste0("N:/Documents/Simplebox/LEON-T_plots/Mass_plot_", scale, ".png"), plot=mass_p)
+    
+    # Concentration plot
+    conc_p <- ggplot(df, mapping = aes(x = concname, y = Concentration, fill = concname)) +  
+      geom_violin() +
+      labs(title = paste0("Concentrations at ", scale, " scale"),
+           subtitle = subt,
+           x = "Compartment",
+           y = "Concentration") +
+      plot_theme +
+      scale_y_continuous(trans = 'log10') +
+      scale_fill_viridis_d() +
+      theme(axis.text.x = element_blank(),  # Remove x-axis labels
+            legend.position = "bottom") +   # Move legend to the bottom
+      guides(fill = guide_legend(title = NULL))  # Remove legend title
+    
+    print(conc_p)
+    
+    ggsave(paste0("N:/Documents/Simplebox/LEON-T_plots/Concentration_plot_", scale, ".png"), plot=conc_p)
+  }
+
+} else if(type == "DPMFA"){
+
+  # Prepare the plot data
+  df_name <- paste0("solved_dyn_",i)
+  solved <- get(df_name)
+  
+  ymin <- as_character(ymin)
+  ymax <- as_character(ymax)
+  
+  Input_Variables <- 
+    solved$Input_Variables |> unnest(data) 
+  
+  inputcomps <- unique(emissions$Abbr)
+  
+  Input_Emission <- solved$DynamicMass |>
+    select(starts_with("emis2"), "time", "RUN") |>
+    rename_with(
+      .fn = ~ str_remove(.x, "emis2"),              # Function to add "_new" to column names
+      .cols = !c("time", "RUN")  # Select columns to modify
+    ) |>
+    pivot_longer(cols = -c("time", "RUN"),
+                 names_to = "Abbr",
+                 values_to = "Emis") 
+  
+  masses_long <- solved$DynamicMass |>
+    select(!starts_with("emis2")) |>
+    rename_with(
+      .fn = ~ paste0("mass_", .x),              # Function to add "_new" to column names
+      .cols = !c("time", "RUN", "Unit") & !starts_with("emis")  # Select columns to modify
+    ) |>
+    pivot_longer(cols = starts_with("mass_"),
+                 names_to = "Abbr",
+                 values_to = "Mass") |>
+    mutate(Abbr =  str_remove(Abbr, "mass_")) |>
+    left_join(Input_Emission, by = c("Abbr", "time", "RUN")) |>
+    left_join(solved$States, by = "Abbr")
+  
+  Plot_data <- 
+    Input_Variables |> 
+    pivot_wider(names_from = c(varName,Scale,SubCompart,Unit), values_from = value) |> 
+    full_join(masses_long) |>
+    mutate(time = time/(365.25*24*60*60))
+  
+  datatmax <- Plot_data |>
+    filter(time == tmax/(365.25*24*60*60)) |>
+    left_join(solved$States)
+  
+  maxyear <- tmax/(365.25*24*60*60)
+  
+  subt_range <- paste0(ymin, "-", ymax, ", ", filtersource , ", ", mat)
+  subt_tmax <- paste0( as.character(y), ", ", filtersource , ", ", mat)
+  
+  # Plot the outcome
+  varnames <- colnames(Plot_data)[2:(1+n_vars)]
+  
+  var_data <- Plot_data |> 
+    filter(Abbr %in% emiscomps)
+  
+  var_tmax <- datatmax |>
+    filter(Abbr %in% emiscomps)
+  
+  for(i in varnames) {
+    p1 <- ggplot(var_data, mapping = aes(x = time, y = Mass, group = RUN, color = .data[[i]])) +  
+      geom_line() + 
+      facet_wrap(vars(Abbr)) +
+      labs(subtitle = subt_range,
+           x = "Time (years)", 
+           y = "Mass (kg)", 
+           color = i) +  
+      ggtitle("Mass in compartment over time (default substance)") +
+      plot_theme
+    print(p1)  
+  }
+  
+  for(i in varnames) {
+    p2 <- ggplot(var_tmax, mapping = aes(x = .data[[i]], y = Mass)) +
       geom_point() + 
       facet_wrap(vars(Abbr)) + 
-      ggtitle("Mass in compartment at year ") + 
-      labs(subtitle = subt,
+      ggtitle(paste0("Mass in compartment at year ", as.character(maxyear))) + 
+      labs(subtitle = subt_tmax,
            x = i,  
            y = "Mass (kg)") +
       plot_theme                 
     print(p2)
-    }
-    
-    # Filter the plot data for the compartments that received emissions
-    EM_data <- Plot_data |>
-      filter(Abbr %in% emiscomps)
-    
-    # Plot the emissions against the masses for these compartments
-    EM_p1 <- ggplot(EM_data, mapping = aes(x = value, y = EqMass)) +
-      geom_point() + 
-      facet_wrap(vars(Abbr)) +
-      ggtitle("Relation between emissions and mass") + 
-      labs(subtitle = "Uncertain emissions",
-           x = "Emissions (kg/s)",
-           y = "Mass (kg)") + 
-      plot_theme
-    EM_p1
-    
-    
   }
   
-} else if(type == "DPMFA"){
-  for(i in df_names){
-    solved <- paste0("solved_",i)
-  }
-}
-
-```
-
-# Plot the outcome 
-
-```{r Data preparation for plots}
-Input_Variables <- 
-  solved$Input_Variables |> unnest(data) 
-Input_Emission <- 
-  solved$Input_Emission |> unnest(Emis) 
-
-Plot_data <- 
-  Input_Variables |> 
-# some units missing resulting in NA
-  pivot_wider(names_from = c(varName,Scale,SubCompart,Unit), values_from = value) |> 
-  full_join(solved$SteadyStateMass) |>
-  full_join(Input_Emission, by = c("Abbr", "RUN"))
-
-varnames <- colnames(Plot_data)[2:(1+n_vars)]
-
-plot_theme <-  theme(
-    axis.title.x = element_text(size = 14),    
-    axis.title.y = element_text(size = 14),    
-    axis.text.x = element_text(size = 12, angle = 45, hjust = 1),     
-    axis.text.y = element_text(size = 12),
-    title = element_text(size=20)
-  )
-
-emiscomps <- unique(solved$Input_Emission$Abbr)
-
-```
-
-```{r Plot SS outcome}
-p1 <- ggplot(Plot_data, mapping = aes(x=varnames[1], y = EqMass)) +
-  geom_point() + facet_wrap(vars(Abbr)) +
-  scale_y_continuous(trans = 'log10')
-p1
-
-plots_data <- Plot_data |>
-  filter(Abbr %in% emiscomps)
-
-subt <- paste0("Uncertain emissions, ", as.character(y), ", ", filtersource , " , ", unique())
-
-for(i in varnames) {
-  p2 <- ggplot(plots_data, mapping = aes(x = .data[[i]], y = EqMass)) +
-  geom_point() + 
-  facet_wrap(vars(Abbr)) + 
-  ggtitle("Mass in compartment at year ") + 
-  labs(subtitle = subt,
-       x = i,  
-       y = "Mass (kg)") +
-  plot_theme                 
-print(p2)
-}
-
-# Filter the plot data for the compartments that received emissions
-EM_data <- Plot_data |>
-  filter(Abbr %in% emiscomps)
-
-# Plot the emissions against the masses for these compartments
-EM_p1 <- ggplot(EM_data, mapping = aes(x = value, y = EqMass)) +
-  geom_point() + 
-  facet_wrap(vars(Abbr)) +
-  ggtitle("Relation between emissions and mass") + 
-  labs(subtitle = "Uncertain emissions",
-       x = "Emissions (kg/s)",
-       y = "Mass (kg)") + 
-  plot_theme
-EM_p1
-```
-
-
-```{r example output plots}
-Input_Variables <- 
-  solved3$Input_Variables |> unnest(data) 
-
-inputcomps <- unique(emissions$Abbr)
-
-Input_Emission <- solved3$DynamicMass |>
-  select(starts_with("emis2"), "time", "RUN") |>
-  rename_with(
-    .fn = ~ str_remove(.x, "emis2"),              # Function to add "_new" to column names
-    .cols = !c("time", "RUN")  # Select columns to modify
-  ) |>
-  pivot_longer(cols = -c("time", "RUN"),
-               names_to = "Abbr",
-               values_to = "Emis") 
-
-masses_long <- solved3$DynamicMass |>
-  select(!starts_with("emis2")) |>
-    rename_with(
-    .fn = ~ paste0("mass_", .x),              # Function to add "_new" to column names
-    .cols = !c("time", "RUN", "Unit") & !starts_with("emis")  # Select columns to modify
-  ) |>
-  pivot_longer(cols = starts_with("mass_"),
-               names_to = "Abbr",
-               values_to = "Mass") |>
-  mutate(Abbr =  str_remove(Abbr, "mass_")) |>
-  left_join(Input_Emission, by = c("Abbr", "time", "RUN")) |>
-  left_join(solved3$States, by = "Abbr")
-
-Plot_data <- 
-  Input_Variables |> 
-# some units missing resulting in NA
-  pivot_wider(names_from = c(varName,Scale,SubCompart,Unit), values_from = value) |> 
-  full_join(masses_long) |>
-  mutate(time = time/(365.25*24*60*60))
-
-datatmax <- Plot_data |>
-  filter(time == tmax/(365.25*24*60*60)) |>
-  left_join(solved3$States)
-
-maxyear <- tmax/(365.25*24*60*60)
-```
-
-```{r Variable plots}
-varnames <- colnames(Plot_data)[2:(1+n_vars)]
-
-var_data <- Plot_data |> 
+  # Filter the plot data for the compartments that received emissions
+  EM_data <- Plot_data |>
     filter(Abbr %in% emiscomps)
-
-var_tmax <- datatmax |>
+  
+  EM_tmax <- datatmax |>
     filter(Abbr %in% emiscomps)
-
-for(i in varnames) {
-  p1 <- ggplot(var_data, mapping = aes(x = time, y = Mass, group = RUN, color = .data[[i]])) +  # Us
-    geom_line() + 
+  
+  # Plot the emissions against the masses for these compartments
+  EM_p1 <- ggplot(EM_tmax, mapping = aes(x = Emis, y = Mass)) +
+    geom_point() + 
     facet_wrap(vars(Abbr)) +
-    labs(subtitle = "Uncertain emissions",
-         x = "Time (years)", 
-         y = "Mass (kg)", 
-         color = i) +  # Use i as the label for color
-    ggtitle("Mass in compartment over time (default substance)") +
+    ggtitle("Relation between emissions and mass") + 
+    labs(subtitle = subt_tmax,
+         x = "Emissions (kg/s)",
+         y = "Mass (kg)") + 
     plot_theme
-  print(p1)  # Use print() to ensure the plot is displayed in a loop
+  print(EM_p1)
 }
 
-for(i in varnames) {
-  p2 <- ggplot(var_tmax, mapping = aes(x = .data[[i]], y = Mass)) +
-  geom_point() + 
-  facet_wrap(vars(Abbr)) + 
-  ggtitle(paste0("Mass in compartment at year ", as.character(maxyear))) + 
-  labs(subtitle = "Uncertain emissions",
-       x = i,  
-       y = "Mass (kg)") +
-  plot_theme                 
-print(p2)
-}
-
-# Filter the plot data for the compartments that received emissions
-EM_data <- Plot_data |>
-  filter(Abbr %in% emiscomps)
-
-EM_tmax <- datatmax |>
-  filter(Abbr %in% emiscomps)
-
-# Plot the emissions against the masses for these compartments
-EM_p1 <- ggplot(EM_tmax, mapping = aes(x = Emis, y = Mass)) +
-  geom_point() + 
-  facet_wrap(vars(Abbr)) +
-  ggtitle("Relation between emissions and mass") + 
-  labs(subtitle = "Uncertain emissions",
-       x = "Emissions (kg/s)",
-       y = "Mass (kg)") + 
-  plot_theme
-EM_p1
 ```
+
